make transition in navbar

--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link  rel="stylesheet" href="main.css"/>
+    <script
+  src="https://code.jquery.com/jquery-3.4.1.js"
+></script>
+<script type="text/javascript">$(window).on('scroll',function(){
+    if ($(window).scrollTop()){
+        $('nav').addClass('black');
+    
+    }
+    else
+    {
+        $('nav').addClass('black'); 
+    }
+})</script>
     <title>Isabel Pizarro</title>
   </head>
   <body>
@@ -24,8 +37,8 @@
           <div class="navigation">
             <nav>
               <ul class="menu">  
-                <li><a href="#about">About</a></li>
-                <li><a href="#services">Services</a></li>
+                <li><a href="#about">Home</a></li>
+                <li><a href="#services">Sobre mí</a></li>
                 <li><a href="#works">Works</a></li>
                 <li><a href="#contact">Contact</a></li>
               </ul>
